# ideal-goggles

./: .gitignore  .npmrc  CLAUDE.md  CONTRIBUTING.md  COVERAGE.md  DEVELOPER_GUIDE.md  FRONTEND_COVERAGE_FINAL_REPORT.md  FRONTEND_TEST_COVERAGE_PLAN.md  LICENSE  Makefile  README.md  USER_MANUAL.md  codecov.yml  coverage.xml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
backend/: .coveragerc  .env.example  .pre-commit-config.yaml  :memory:  COVERAGE_REPORT_FINAL.md  Dockerfile  Makefile  README.md  README_UAT.md  alembic.ini  coverage.json  coverage.xml  docker-compose.yml  ideal-goggles-backend.spec  init_test_db.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_coverage_improvement_plan.md  test_embeddings.py
backend/alembic/: env.py
backend/alembic/versions/: 20251213_214438_a1b2c3d4e5f6_initial_schema.py
backend/scripts/: init_test_db.py  install_ml_dependencies.py  setup_ml_models.py
backend/src/: __init__.py  main.py
backend/src/api/: batch_operations.py  config.py  dependencies.py  health.py  indexing.py  logs.py  models.py  people.py  search.py
backend/src/core/: __init__.py  config.py  event_queue.py  logging_config.py  middleware.py  utils.py
backend/src/db/: connection.py  utils.py
backend/src/db/migrations/: 001_initial_schema.sql
backend/src/models/: embedding.py  exif.py  ocr.py  person.py  photo.py  thumbnail.py
backend/src/services/: drive_manager.py  faiss_manager.py  rank_fusion.py  text_search.py  vector_search.py
backend/src/workers/: batch_worker.py  crawler.py  embedding_worker.py  exif_extractor.py  face_worker.py  ocr_worker.py  thumbnail_worker.py
backend/tests/: __init__.py  conftest.py  test_api_health.py  test_api_health.py.disabled  test_api_indexing.py  test_api_indexing.py.disabled  test_api_search.py  test_api_search.py.disabled  test_health_endpoints.py  test_indexing_endpoints.py  test_indexing_endpoints.py.disabled  test_integration_full_flow.py  test_integration_full_flow.py.disabled  test_integration_indexing.py.bak  test_search_endpoints.py  test_search_endpoints.py.disabled
backend/tests/contract/: __init__.py  test_api_indexing.py  test_api_search.py  test_config.py  test_config_roots.py  test_health.py  test_health_endpoints.py  test_index_start.py  test_index_status.py  test_indexing_endpoints.py  test_people_create.py  test_people_delete.py  test_search.py  test_search_endpoints.py  test_search_faces.py  test_search_image.py  test_search_semantic.py
backend/tests/integration/: __init__.py  test_batch_delete.py  test_batch_export.py  test_drive_aliasing.py  test_face_search.py  test_image_search.py  test_indexing.py  test_integration_full_flow.py  test_text_search.py
backend/tests/performance/: __init__.py  test_search_performance.py
backend/tests/unit/: conftest.py  test_api_batch_operations.py  test_api_config.py  test_api_dependencies.py  test_api_dependencies_internals.py  test_api_health.py  test_api_indexing.py  test_api_logs.py  test_api_models.py  test_api_people.py  test_api_search.py  test_basic.py  test_batch_worker.py  test_core_config.py  test_core_event_queue.py.disabled  test_core_logging.py  test_core_logging_full.py  test_core_middleware.py  test_core_middleware_full.py  test_core_utils.py  test_crawler.py  test_db_connection.py  test_db_connection_full.py  test_db_utils.py  test_drive_manager.py  test_embedding_worker.py  test_event_queue.py  test_exif_extractor.py  test_face_worker.py  test_face_worker_coverage.py  test_faiss_manager.py  test_faiss_manager_full.py  test_models_embedding.py  test_models_ocr.py  test_models_person.py  test_models_photo.py  test_models_thumbnail.py  test_ocr_worker.py  test_search_consolidated.py  test_search_consolidated.py.disabled  (+10 more)
backend/tests/unit/api/: test_batch_operations.py  test_batch_operations_internals.py  test_config.py  test_config_coverage.py  test_dependencies.py  test_indexing.py  test_indexing_coverage.py  test_indexing_internals.py  test_logs.py  test_people.py  test_people_coverage.py  test_search.py  test_search_coverage.py
backend/tests/unit/contract/: conftest.py  test_config.py  test_health_endpoints.py  test_index_start.py  test_indexing_endpoints.py  test_people_create.py  test_search_endpoints.py  test_search_image.py
backend/tests/unit/core/: test_config.py  test_event_queue.py  test_logging.py  test_middleware.py  test_utils.py
backend/tests/unit/db/: test_connection.py  test_connection_internals.py  test_utils.py
backend/tests/unit/integration/: __init__.py  conftest.py  test_batch_delete.py  test_batch_export.py  test_face_search.py  test_image_search.py  test_indexing.py  test_integration_full_flow.py
backend/tests/unit/integration.disabled/: test_batch_delete.py.disabled  test_batch_export.py.disabled
backend/tests/unit/models/: test_exif.py  test_thumbnail.py
backend/tests/unit/services/: test_drive_manager.py  test_faiss_manager.py  test_faiss_manager_coverage.py  test_text_search.py  test_vector_search.py
backend/tests/unit/workers/: test_batch_worker.py  test_crawler.py  test_exif_extractor.py  test_face_worker.py  test_thumbnail_worker.py  test_thumbnail_worker_internals.py
build-resources/: entitlements.mac.plist  icon.icns  installer.nsh
docs/: AUTO_UPDATER.md  BACKEND_IMPROVEMENTS.md  CONTRIBUTING.md  COVERAGE.md  DESIGN_TOKENS.md  DEVELOPER_GUIDE.md  INSTALLER_CUSTOMIZATION.md  ML_DEPENDENCIES_PRODUCTION.md  ML_SETUP.md  RELEASING.md  TEST_STRATEGY.md  USER_MANUAL.md  _config.yml  git-hooks.md  index.md
electron/: main.ts  preload.ts  tsconfig.json
frontend/: .eslintrc.json  eslint.config.mjs  index.html  jest.config.js  jest.config.p0.js  jest.config.p1.js  jest.config.p2.js  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.js  prettier.config.js  tailwind.config.js  test-css.html  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.test.json  vite.config.ts
func_tests/: .gitignore  README.md  playwright.config.ts  test-config.ts
scripts/: create-elegant-installer-backgrounds.sh  create-tag.js  dev.sh  (+10 more)
(+218 files in other folders)
